@@ -8,3 +8,4 @@
 
 0.4:  Added All(), Literal() and RowFactor()
       Added table_options() and booktabs() for booktabs support
+      Gave different defaults for row label justification and data justification
